# toon

./: Cargo.toml  deny.toml
.github/: FUNDING.yml
.github/workflows/: benchmarks.yml  ci.yml  dependency-update.yml  docs.yml  release.yml  security.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
database/: Cargo.toml  README.md
database/src/: lib.rs  main.rs
format/: Cargo.toml  README.md  SPEC.md
format/benches/: references.rs  serialize.rs
format/src/: error.rs  lib.rs
format/src/deserialization/: decoder.rs  deserializer.rs  mod.rs  reader.rs
format/src/registry/: cache.rs  mod.rs  resolver.rs  token_registry.rs
format/src/serialization/: encoder.rs  mod.rs  serializer.rs  writer.rs
format/src/spec/: constants.rs
format/src/types/: metadata.rs  mod.rs  reference.rs  token.rs  value.rs
format/src/validation/: checksum.rs  constraints.rs  mod.rs  schema.rs
format/tests/: deserialize.rs  fuzz_like.rs  metadata.rs  registry.rs  serialize.rs  spec_markers.rs  types.rs  validation.rs
