[workspace]
members = [
    "format",
    "database",
    "cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"


[workspace.dependencies]
uuid = { version = "1.20", features = ["v4"] }
thiserror = "1.0"
crc32fast = "1.4"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
inherits = "release"
