[package]
name = "toon-format"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
uuid = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }

[dev-dependencies]
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"

[[bench]]
name = "serialize"
harness = false
